--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,5 +1,6 @@
 .footer {
-	border-top: 1px solid #777;
+	background-color: rgba(#fff, 15%);
+	backdrop-filter: blur(5px);
 	display: flex;
 	width: 100%;
 
