--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -1,5 +1,8 @@
+@import './variables.module';
+
 .header {
-	border-bottom: 1px solid #777;
+	background-color: rgba(#fff, 15%);
+	backdrop-filter: blur(5px);
 	left: 0;
 	position: absolute;
 	top: 0;
@@ -19,27 +22,31 @@
 		width: 80px;
 		height: 100%;
 	}
+}
 
-	.nav {
+.nav {
+	display: flex;
+	height: 100%;
+	width: 100%;
+
+	.navList {
 		display: flex;
-		height: 100%;
+		justify-content: flex-end;
+		list-style: none;
+		margin: 0;
+		padding: 0;
 		width: 100%;
 
-		.navList {
+		.navLink {
+			color: $primary-color;
+			font-family: 'Alegreya Sans SC', sans-serif;
+			font-weight: bold;
+			font-size: 1.3em;
 			display: flex;
-			justify-content: flex-end;
-			list-style: none;
-			margin: 0;
-			padding: 0;
-			width: 100%;
+			padding: 24px;
 
-			.navLink {
-				display: flex;
-				padding: 24px;
-
-				&:hover {
-					color: aquamarine;
-				}
+			&:hover {
+				color: $secondary-color;
 			}
 		}
 	}
