--- a/styles/Filter.module.scss
+++ b/styles/Filter.module.scss
@@ -9,19 +9,28 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		padding: 8px;
+		padding: 8px 16px;
 	}
-}
 
-.mainCategories {
-	background-color: #f5f5f5;
-	border-radius: 10px;
-	box-shadow: $box-shadow-med;
-}
+	.mainCategories {
+		background-color: $secondary-color;
+		border: 6px solid transparent;
+		border-radius: 10px;
+		box-shadow: $box-shadow-med;
+	}
 
-.subCategories {
-}
+	.subCategories {
+		background-color: #fff;
+		border: 6px solid $secondary-color;
+		border-radius: 0 0 10px 10px;
+		box-shadow: $box-shadow-med;
+		margin-top: -8px;
+		transition: all 0.2s ease-in-out;
+		width: auto;
+	}
 
-.filterIcon {
-	margin: 0 16px;
+	.filterIcon {
+		color: #fff;
+		margin-right: 16px;
+	}
 }
