--- a/styles/variables.module.scss
+++ b/styles/variables.module.scss
@@ -1,5 +1,6 @@
 $primary-color: #ee8434;
 $secondary-color: #717ec3;
+$tertiary-color: #dd1c1a;
 
 $box-shadow-med: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 $box-shadow-large: rgba(0, 0, 0, 0.24) 0px 6px 16px;
