--- a/styles/Chip.module.scss
+++ b/styles/Chip.module.scss
@@ -18,6 +18,11 @@
 		background-color: $primary-color;
 		border-color: $primary-color;
 		color: #fff;
+
+		&:hover {
+			background-color: $tertiary-color;
+			border-color: $tertiary-color;
+		}
 	}
 
 	&.subCategoryChip {
@@ -27,6 +32,11 @@
 		&.selected {
 			background-color: $primary-color;
 			border-color: $primary-color;
+
+			&:hover {
+				background-color: $tertiary-color;
+				border-color: $tertiary-color;
+			}
 		}
 	}
 
