--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,6 +1,7 @@
+@import './variables.module.scss';
+
 .footer {
-	background-color: rgba(#fff, 15%);
-	backdrop-filter: blur(5px);
+	background-color: $secondary-color;
 	display: flex;
 	width: 100%;
 
@@ -12,23 +13,25 @@
 		margin-right: auto;
 		max-width: 1400px;
 		width: 100%;
+	}
+}
 
-		.footerLinkList {
-			display: flex;
-			justify-content: center;
-			list-style: none;
-			margin: 0;
-			padding: 0;
-			width: 100%;
+.footerLinkList {
+	display: flex;
+	justify-content: center;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	width: 100%;
 
-			.footerNavLink {
-				display: flex;
-				padding: 24px;
+	.footerNavLink {
+		color: #fff;
+		display: flex;
+		padding: 24px;
 
-				&:hover {
-					color: aquamarine;
-				}
-			}
+		&:hover {
+			color: $primary-color;
+			transition: all 0.2s ease-in-out;
 		}
 	}
 }
