--- a/styles/Post.module.scss
+++ b/styles/Post.module.scss
@@ -1,3 +1,42 @@
+@import './variables.module.scss';
+
+.postContainer {
+	display: flex;
+	flex-direction: column;
+	max-width: 1400px;
+	width: 100%;
+
+	.postMainSection {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		&.firstPost {
+			margin-left: auto;
+		}
+
+		&.lastPost {
+			margin-right: auto;
+		}
+	}
+}
+
+.postNavigation {
+	align-items: center;
+	color: $primary-color;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	justify-content: center;
+	width: calc(320px / 2);
+
+	&:hover {
+		color: $secondary-color;
+		cursor: pointer;
+		transition: all 0.2s ease-in-out;
+	}
+}
+
 .post {
 	position: relative;
 	max-width: 1080px;
@@ -18,7 +57,94 @@
 	text-align: center;
 }
 
-.body {
-	margin-top: 24px;
-	font-size: 20px;
+.postMetadata {
+	align-items: center;
+	display: flex;
+	justify-content: space-between;
+	max-width: 1080px;
+	padding: 16px;
+	width: 100%;
+
+	.postCategories {
+		span {
+			color: $secondary-color;
+			border-color: $secondary-color;
+
+			&:hover {
+				color: #fff;
+				background-color: $secondary-color;
+			}
+		}
+	}
+
+	.postDownloadButtons {
+		span {
+			font-family: 'Alegreya Sans SC';
+			text-transform: lowercase;
+			font-weight: 700;
+			color: #777;
+		}
+
+		button {
+			border: none;
+			border-radius: 4px;
+			font-family: 'Alegreya Sans SC';
+			font-size: 1em;
+			font-weight: bold;
+			padding: 8px 16px;
+			margin-left: 8px;
+
+			&:hover {
+				cursor: pointer;
+			}
+
+			&:first-of-type {
+				background-color: #777;
+				color: #fff;
+
+				&:hover {
+					background-color: #333;
+				}
+			}
+
+			&:last-of-type {
+				background-color: $primary-color;
+				color: #fff;
+
+				&:hover {
+					background-color: $secondary-color;
+				}
+			}
+		}
+	}
+
+	.postDate {
+		span {
+			font-family: 'Alegreya Sans SC';
+			text-transform: lowercase;
+			font-weight: 700;
+			color: #777;
+		}
+	}
+}
+
+.postContent {
+	max-width: 1080px;
+	margin-bottom: 64px;
+	width: 100%;
+
+	p {
+		font-size: 1.4em;
+		padding: 16px;
+	}
+
+	.postLore {
+		font-family: 'Alegreya';
+		font-style: italic;
+		border-radius: 8px;
+	}
+
+	.postNote {
+		background-color: #ddd;
+	}
 }
