--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@import './variables.module.scss';
+
 html,
 body {
 	padding: 0;
@@ -51,4 +53,27 @@ p {
 	margin: 0 auto;
 	max-width: 1400px;
 	width: 100%;
+}
+
+.chip {
+	border: 2px solid #fff;
+	border-radius: 16px;
+	color: #fff;
+	display: inline-block;
+	font-family: 'Alegreya Sans SC';
+	font-weight: bold;
+	padding: 8px 16px;
+	text-transform: lowercase;
+
+	&:not(:last-child) {
+		margin-right: 8px;
+	}
+
+	&:hover {
+		background-color: $primary-color;
+		border-color: $primary-color;
+		color: #fff;
+		transition: all 0.2s ease-in-out;
+		cursor: pointer;
+	}
 }
