--- a/styles/Chip.module.scss
+++ b/styles/Chip.module.scss
@@ -1,29 +1,27 @@
 @import './variables.module.scss';
 
-.chip {
+.selected {
+	background-color: $primary-color;
+	border-color: $primary-color;
+	color: #fff;
+
+	&:hover {
+		background-color: $tertiary-color;
+		border-color: $tertiary-color;
+	}
+}
+
+.subCategoryChip {
+	background-color: $secondary-color;
+	border-color: $secondary-color;
+
 	&.selected {
 		background-color: $primary-color;
 		border-color: $primary-color;
-		color: #fff;
 
 		&:hover {
 			background-color: $tertiary-color;
 			border-color: $tertiary-color;
-		}
-	}
-
-	&.subCategoryChip {
-		background-color: $secondary-color;
-		border-color: $secondary-color;
-
-		&.selected {
-			background-color: $primary-color;
-			border-color: $primary-color;
-
-			&:hover {
-				background-color: $tertiary-color;
-				border-color: $tertiary-color;
-			}
 		}
 	}
 }
