--- a/styles/Map.module.scss
+++ b/styles/Map.module.scss
@@ -1,27 +1,27 @@
 @import './variables.module.scss';
 
-.postContainer {
+.mapContainer {
 	display: flex;
 	flex-direction: column;
 	max-width: 1400px;
 	width: 100%;
 
-	.postMainSection {
+	.mapMainSection {
 		display: flex;
 		align-items: center;
 		justify-content: center;
 
-		&.firstPost {
+		&.firstMap {
 			margin-left: auto;
 		}
 
-		&.lastPost {
+		&.lastMap {
 			margin-right: auto;
 		}
 	}
 }
 
-.postNavigation {
+.mapNavigation {
 	align-items: center;
 	color: $primary-color;
 	display: flex;
@@ -37,7 +37,7 @@
 	}
 }
 
-.post {
+.map {
 	position: relative;
 	max-width: 1080px;
 	width: 100%;
@@ -57,7 +57,7 @@
 	text-align: center;
 }
 
-.postMetadata {
+.mapMetadata {
 	align-items: center;
 	display: flex;
 	justify-content: space-between;
@@ -65,7 +65,7 @@
 	padding: 16px;
 	width: 100%;
 
-	.postCategories {
+	.mapCategories {
 		span {
 			color: $secondary-color;
 			border-color: $secondary-color;
@@ -77,48 +77,7 @@
 		}
 	}
 
-	.postDownloadButtons {
-		span {
-			font-family: 'Alegreya Sans SC';
-			text-transform: lowercase;
-			font-weight: 700;
-			color: #777;
-		}
-
-		button {
-			border: none;
-			border-radius: 4px;
-			font-family: 'Alegreya Sans SC';
-			font-size: 1em;
-			font-weight: bold;
-			padding: 8px 16px;
-			margin-left: 8px;
-
-			&:hover {
-				cursor: pointer;
-			}
-
-			&:first-of-type {
-				background-color: #777;
-				color: #fff;
-
-				&:hover {
-					background-color: #333;
-				}
-			}
-
-			&:last-of-type {
-				background-color: $primary-color;
-				color: #fff;
-
-				&:hover {
-					background-color: $secondary-color;
-				}
-			}
-		}
-	}
-
-	.postDate {
+	.mapDate {
 		span {
 			font-family: 'Alegreya Sans SC';
 			text-transform: lowercase;
@@ -128,7 +87,7 @@
 	}
 }
 
-.postContent {
+.mapContent {
 	max-width: 1080px;
 	margin-bottom: 64px;
 	width: 100%;
@@ -138,13 +97,13 @@
 		padding: 16px;
 	}
 
-	.postLore {
+	.mapLore {
 		font-family: 'Alegreya';
 		font-style: italic;
 		border-radius: 8px;
 	}
 
-	.postNote {
+	.mapNote {
 		background-color: #ddd;
 	}
 }
