--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,11 +27,13 @@ a {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
 	font-family: 'Alegreya SC';
 }
 
-h3 {
+h3,
+h4 {
 	margin: 0;
 	padding: 16px;
 }
@@ -39,6 +41,26 @@ h3 {
 p {
 	margin: 0;
 	padding: 16px;
+}
+
+ul {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+}
+
+button {
+	border: none;
+	border-radius: 4px;
+	font-family: 'Alegreya Sans SC';
+	font-size: 1em;
+	font-weight: bold;
+	padding: 8px 16px;
+
+	&:hover {
+		cursor: pointer;
+		transition: all 0.2s ease-in-out;
+	}
 }
 
 .half-section {
@@ -75,5 +97,36 @@ p {
 		color: #fff;
 		transition: all 0.2s ease-in-out;
 		cursor: pointer;
+	}
+}
+
+.mapDownloadButtons {
+	span {
+		font-family: 'Alegreya Sans SC';
+		text-transform: lowercase;
+		font-weight: 700;
+		color: #777;
+	}
+
+	button {
+		margin-left: 8px;
+
+		&:first-of-type {
+			background-color: #777;
+			color: #fff;
+
+			&:hover {
+				background-color: #333;
+			}
+		}
+
+		&:last-of-type {
+			background-color: $primary-color;
+			color: #fff;
+
+			&:hover {
+				background-color: $secondary-color;
+			}
+		}
 	}
 }
