add pages and make filtering work

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -45,6 +45,10 @@
 			display: flex;
 			padding: 24px;
 
+			&.active {
+				color: $secondary-color;
+			}
+
 			&:hover {
 				color: $secondary-color;
 			}
