--- a/styles/Maps.module.scss
+++ b/styles/Maps.module.scss
@@ -9,7 +9,7 @@
 .smallView {
 	background-color: #eee;
 	height: 100%;
-	overflow-y: scroll;
+	overflow-y: scroll; // https://stackoverflow.com/questions/16670931/hide-scroll-bar-but-while-still-being-able-to-scroll
 	padding: 16px;
 	width: 20%;
 
@@ -28,17 +28,21 @@
 		}
 	}
 
-	h4 {
+	h3 {
 		padding: 0;
 		text-align: center;
 	}
 
-	img {
-		border: 3px solid #fff;
-		border-radius: 16px;
-		box-shadow: $box-shadow-med;
-		width: 100%;
+	.smallImageContainer {
+		img {
+			border: 3px solid #fff !important;
+			border-radius: 16px !important;
+			// box-shadow: $box-shadow-med !important;
+			object-fit: cover;
+			width: 100% !important;
+		}
 	}
+
 }
 
 .bigView {
@@ -53,6 +57,21 @@
 		display: flex;
 		justify-content: space-around;
 		width: 100%;
+
+		a {
+			border: none;
+			border-radius: 4px;
+			display: inline-block;
+			font-family: 'Alegreya Sans SC';
+			font-size: 1em;
+			font-weight: bold;
+			padding: 8px 16px;
+
+			&:hover {
+				cursor: pointer;
+				transition: all 0.2s ease-in-out;
+			}
+		}
 	}
 
 	.viewButton {
@@ -65,7 +84,8 @@
 	}
 
 	.bigImageContainer {
-		height: calc(100% - 35px);
+		height: 100%;
+		margin: 24px;
 		position: relative;
 		width: 100%;
 	}
