--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -32,6 +32,10 @@ h4 {
 	font-family: 'Alegreya SC';
 }
 
+h1 {
+	font-size: 2em;
+}
+
 h3,
 h4 {
 	margin: 0;
@@ -108,7 +112,8 @@ button {
 		color: #777;
 	}
 
-	button, a {
+	button,
+	a {
 		margin-left: 8px;
 
 		&:first-of-type {
