--- a/styles/MapDownloadButtons.module.scss
+++ b/styles/MapDownloadButtons.module.scss
@@ -9,8 +9,6 @@
 	}
 
 	button {
-		margin-left: 8px;
-
 		&:first-of-type {
 			background-color: #777;
 			color: #fff;
@@ -21,6 +19,7 @@
 		}
 
 		&:last-of-type {
+			margin-left: 8px;
 			background-color: $primary-color;
 			color: #fff;
 
@@ -30,11 +29,32 @@
 		}
 	}
 
-	&.horizontal {
+	// a {
+	// 	border: none;
+	// 	border-radius: 4px;
+	// 	display: inline-block;
+	// 	font-family: 'Alegreya Sans SC';
+	// 	font-size: 1em;
+	// 	font-weight: bold;
+	// 	padding: 8px 16px;
 
+	// 	&:hover {
+	// 		cursor: pointer;
+	// 		transition: all 0.2s ease-in-out;
+	// 	}
+	// }
+
+	&.horizontal {
 	}
 
 	&.vertical {
-		
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
+}
+
+.buttonContainer {
+	display: flex;
+	flex-direction: row;
 }
